--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,7 @@ body {
     background-color: black;
     opacity: 0.9;
     text-align: center;
+    margin: auto;
 }
 
 header {
@@ -44,5 +45,60 @@ nav span {
 .logo img {
   width: auto;;
   height: 50px;
-  margin-right: 12px;
+  /* margin-right: 12px; */
+}
+
+.mission {
+  display: flex;
+  height: 700px;
+  width: 1200px;
+  top: auto;
+  align-items: center;
+  background-image: url("../../resources/images/img-mission-background.jpg")
+}
+
+.mission-text {
+  height: auto;
+  width: inherit;
+  background-color: black;
+}
+
+.featured-menu {
+  width: 1000px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.menu-row {
+  width: inherit;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.locations {
+  display: flex;
+  width: 1200px;
+  flex-direction: column;
+  background-image: url("../../resources/images/img-locations-background.jpg")
+}
+
+.location-row {
+  display: flex;
+  align-content: space-around;
+}
+
+.location {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  border: 1px solid orange;
 }
