Mission & Location sections finished

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,11 +48,19 @@ nav span {
   /* margin-right: 12px; */
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 70px; /* account for header */
+}
+
 .mission {
   display: flex;
   height: 700px;
   width: 1200px;
-  top: auto;
+  top: 70px;
   align-items: center;
   background-image: url("../../resources/images/img-mission-background.jpg")
 }
@@ -63,8 +71,19 @@ nav span {
   background-color: black;
 }
 
+.mission-text h2 {
+  -webkit-margin-before: 15px;
+  -webkit-margin-after: 15px;
+}
+
+.mission-text h4 {
+  -webkit-margin-before: 12px;
+  -webkit-margin-after: 12px;
+}
+
 .featured-menu {
   width: 1000px;
+  height: 770px;
   display: flex;
   flex-direction: column;
   margin-left: 100px;
@@ -74,31 +93,73 @@ nav span {
 .menu-row {
   width: inherit;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .menu-item {
   display: flex;
   flex-direction: column;
+/*  margin: 10px;*/
+}
+
+.menu-item span {
+    font-weight: bold;
+}
+
+.menu-item img {
+  padding: 10px;
 }
 
 .locations {
   display: flex;
+  /* height: 500px; */ /* size "marked off" in redline */
+  height: 570px; /* size measured from redline */
   width: 1200px;
   flex-direction: column;
   background-image: url("../../resources/images/img-locations-background.jpg")
 }
 
+.locations h2 {
+    margin-top: 85px;
+    margin-bottom: 15px;
+}
+
 .location-row {
   display: flex;
-  align-content: space-around;
+  align-items: center;
+  justify-content: center;
 }
 
 .location {
   display: flex;
   flex-direction: column;
   background-color: black;
+  opacity: 1;
+  justify-content: space-around;
+  margin-left: 20px;
+  margin-right: 20px;
   width: 300px;
-  height: 300px;
-  border: 1px solid orange;
+  height: 275px; /* measured from redline using graphics viewer */
+}
+
+.location h3 {
+  display: inline;
+  -webkit-margin-before: 22px;
+  -webkit-margin-after: 30px;
+}
+
+.location p {
+  display: inline;
+  -webkit-margin-before: 0px;
+  -webkit-margin-after: 30px;
+}
+
+.contact {
+  width: 1200px;
+}
+
+footer {
+  height: 200px;
+  margin-left: 20px;
+  text-align: left;
 }
